// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test wallet details with empty trasnasctions 1`] = `
<View
  style={
    Object {
      "width": "100%",
    }
  }
>
  <RCTScrollView
    ListFooterComponent={
      <View
        style={
          Object {
            "marginBottom": 10,
            "marginTop": 10,
          }
        }
      >
        <ActivityIndicator
          animating={true}
          color="#2AB2E2"
          hidesWhenStopped={true}
          size={30}
        />
      </View>
    }
    ListHeaderComponent={[Function]}
    data={Array []}
    disableVirtualization={false}
    getItem={[Function]}
    getItemCount={[Function]}
    horizontal={false}
    initialNumToRender={10}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    onContentSizeChange={[Function]}
    onEndReached={[Function]}
    onEndReachedThreshold={0.01}
    onLayout={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    renderItem={[Function]}
    scrollEventThrottle={50}
    stickyHeaderIndices={Array []}
    updateCellsBatchingPeriod={50}
    windowSize={21}
  >
    <View>
      <View
        onLayout={[Function]}
      >
        <View>
          <View
            style={
              Object {
                "alignSelf": "center",
                "marginTop": 15,
                "width": "85%",
              }
            }
          >
            <View
              style={
                Object {
                  "flex": 1,
                  "flexDirection": "row",
                }
              }
            >
              <Image
                source={
                  Object {
                    "testUri": "../../../assets/img/dot.png",
                  }
                }
                style={
                  Object {
                    "borderRadius": 75,
                    "height": 60,
                    "overflow": "hidden",
                    "width": 60,
                  }
                }
              />
              <View
                style={
                  Object {
                    "flex": 1,
                    "flexDirection": "column-reverse",
                    "marginLeft": 20,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "flexDirection": "row",
                      "paddingTop": 5,
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "flex": 1,
                      }
                    }
                  >
                    <Text
                      style={
                        Array [
                          Object {
                            "color": "black",
                            "fontFamily": "Roboto-Regular",
                            "fontSize": 18,
                            "fontStyle": "normal",
                          },
                          Object {
                            "textAlign": "left",
                          },
                        ]
                      }
                    >
                      100
                       
                      DOT
                    </Text>
                  </View>
                  <View
                    style={
                      Object {
                        "flex": 1,
                      }
                    }
                  >
                    <Text
                      style={
                        Array [
                          Object {
                            "color": "black",
                            "fontFamily": "Roboto-Regular",
                            "fontSize": 18,
                            "fontStyle": "normal",
                          },
                          Object {
                            "textAlign": "right",
                          },
                        ]
                      }
                    >
                      10000
                       $
                    </Text>
                  </View>
                </View>
                <Text
                  style={
                    Object {
                      "color": "#888888",
                      "fontFamily": "Roboto-Regular",
                      "fontSize": 16,
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    }
                  }
                >
                  Wallet #1
                </Text>
              </View>
            </View>
          </View>
          <View
            style={
              Object {
                "flexDirection": "row",
                "justifyContent": "center",
                "marginTop": 30,
              }
            }
          >
            <View>
              <View
                accessible={true}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "#F0EEEE",
                    "borderRadius": 45,
                    "height": 70,
                    "justifyContent": "center",
                    "width": 70,
                  }
                }
              >
                <Text
                  allowFontScaling={false}
                  style={
                    Array [
                      Object {
                        "color": "#666666",
                        "fontSize": 24,
                      },
                      undefined,
                      Object {
                        "fontFamily": "Material Design Icons",
                        "fontStyle": "normal",
                        "fontWeight": "normal",
                      },
                      Object {},
                    ]
                  }
                >
                  󰸇
                </Text>
              </View>
              <Text
                style={
                  Object {
                    "color": "black",
                    "fontFamily": "Roboto-Regular",
                    "fontSize": 16,
                    "fontStyle": "normal",
                    "paddingTop": 2,
                    "textAlign": "center",
                  }
                }
              >
                Send
              </Text>
            </View>
            <View
              style={
                Object {
                  "marginLeft": 30,
                }
              }
            >
              <View
                accessible={true}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#F0EEEE",
                      "borderRadius": 45,
                      "height": 70,
                      "justifyContent": "center",
                      "width": 70,
                    },
                  ]
                }
              >
                <Text
                  allowFontScaling={false}
                  style={
                    Array [
                      Object {
                        "color": "#666666",
                        "fontSize": 24,
                      },
                      undefined,
                      Object {
                        "fontFamily": "Material Design Icons",
                        "fontStyle": "normal",
                        "fontWeight": "normal",
                      },
                      Object {},
                    ]
                  }
                >
                  󰮏
                </Text>
              </View>
              <Text
                style={
                  Object {
                    "color": "black",
                    "fontFamily": "Roboto-Regular",
                    "fontSize": 16,
                    "fontStyle": "normal",
                    "paddingTop": 2,
                    "textAlign": "center",
                  }
                }
              >
                Receive
              </Text>
            </View>
          </View>
          <View
            style={
              Object {
                "alignSelf": "center",
                "backgroundColor": "#cccccc",
                "height": 1,
                "marginTop": 25,
                "width": "90%",
              }
            }
          />
        </View>
      </View>
      <View
        onLayout={[Function]}
      >
        <View
          style={
            Object {
              "marginBottom": 10,
              "marginTop": 10,
            }
          }
        >
          <ActivityIndicator
            animating={true}
            color="#2AB2E2"
            hidesWhenStopped={true}
            size={30}
          />
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`Test wallet details with trasnasctions 1`] = `
<View
  style={
    Object {
      "width": "100%",
    }
  }
>
  <RCTScrollView
    ListFooterComponent={
      <View
        style={
          Object {
            "marginBottom": 10,
            "marginTop": 10,
          }
        }
      >
        <ActivityIndicator
          animating={true}
          color="#2AB2E2"
          hidesWhenStopped={true}
          size={30}
        />
      </View>
    }
    ListHeaderComponent={[Function]}
    data={
      Array [
        Object {
          "data": Array [
            Transaction {
              "currency": 0,
              "date": 2020-12-11T21:00:00.000Z,
              "fee": 123,
              "id": "id0",
              "member": "member0",
              "txType": 1,
              "value": 100,
            },
            Transaction {
              "currency": 0,
              "date": 2020-12-11T21:00:00.000Z,
              "fee": 123,
              "id": "id1",
              "member": "member1",
              "txType": 1,
              "value": 100,
            },
            Transaction {
              "currency": 0,
              "date": 2020-12-11T21:00:00.000Z,
              "fee": 123,
              "id": "id2",
              "member": "member2",
              "txType": 1,
              "value": 100,
            },
            Transaction {
              "currency": 0,
              "date": 2020-12-11T21:00:00.000Z,
              "fee": 123,
              "id": "id3",
              "member": "member3",
              "txType": 1,
              "value": 100,
            },
            Transaction {
              "currency": 0,
              "date": 2020-12-11T21:00:00.000Z,
              "fee": 123,
              "id": "id4",
              "member": "member4",
              "txType": 1,
              "value": 100,
            },
            Transaction {
              "currency": 0,
              "date": 2020-12-11T21:00:00.000Z,
              "fee": 123,
              "id": "id5",
              "member": "member5",
              "txType": 1,
              "value": 100,
            },
            Transaction {
              "currency": 0,
              "date": 2020-12-11T21:00:00.000Z,
              "fee": 123,
              "id": "id6",
              "member": "member6",
              "txType": 1,
              "value": 100,
            },
            Transaction {
              "currency": 0,
              "date": 2020-12-11T21:00:00.000Z,
              "fee": 123,
              "id": "id7",
              "member": "member7",
              "txType": 1,
              "value": 100,
            },
            Transaction {
              "currency": 0,
              "date": 2020-12-11T21:00:00.000Z,
              "fee": 123,
              "id": "id8",
              "member": "member8",
              "txType": 1,
              "value": 100,
            },
            Transaction {
              "currency": 0,
              "date": 2020-12-11T21:00:00.000Z,
              "fee": 123,
              "id": "id9",
              "member": "member9",
              "txType": 1,
              "value": 100,
            },
          ],
          "title": "12 December",
        },
      ]
    }
    disableVirtualization={false}
    getItem={[Function]}
    getItemCount={[Function]}
    horizontal={false}
    initialNumToRender={10}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    onContentSizeChange={[Function]}
    onEndReached={[Function]}
    onEndReachedThreshold={0.01}
    onLayout={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    renderItem={[Function]}
    scrollEventThrottle={50}
    stickyHeaderIndices={
      Array [
        1,
      ]
    }
    updateCellsBatchingPeriod={50}
    windowSize={21}
  >
    <View>
      <View
        onLayout={[Function]}
      >
        <View>
          <View
            style={
              Object {
                "alignSelf": "center",
                "marginTop": 15,
                "width": "85%",
              }
            }
          >
            <View
              style={
                Object {
                  "flex": 1,
                  "flexDirection": "row",
                }
              }
            >
              <Image
                source={
                  Object {
                    "testUri": "../../../assets/img/kusama.png",
                  }
                }
                style={
                  Object {
                    "borderRadius": 75,
                    "height": 60,
                    "overflow": "hidden",
                    "width": 60,
                  }
                }
              />
              <View
                style={
                  Object {
                    "flex": 1,
                    "flexDirection": "column-reverse",
                    "marginLeft": 20,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "flexDirection": "row",
                      "paddingTop": 5,
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "flex": 1,
                      }
                    }
                  >
                    <Text
                      style={
                        Array [
                          Object {
                            "color": "black",
                            "fontFamily": "Roboto-Regular",
                            "fontSize": 18,
                            "fontStyle": "normal",
                          },
                          Object {
                            "textAlign": "left",
                          },
                        ]
                      }
                    >
                      111
                       
                      KSM
                    </Text>
                  </View>
                  <View
                    style={
                      Object {
                        "flex": 1,
                      }
                    }
                  >
                    <Text
                      style={
                        Array [
                          Object {
                            "color": "black",
                            "fontFamily": "Roboto-Regular",
                            "fontSize": 18,
                            "fontStyle": "normal",
                          },
                          Object {
                            "textAlign": "right",
                          },
                        ]
                      }
                    >
                      24642
                       $
                    </Text>
                  </View>
                </View>
                <Text
                  style={
                    Object {
                      "color": "#888888",
                      "fontFamily": "Roboto-Regular",
                      "fontSize": 16,
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    }
                  }
                >
                  Wallet #2
                </Text>
              </View>
            </View>
          </View>
          <View
            style={
              Object {
                "flexDirection": "row",
                "justifyContent": "center",
                "marginTop": 30,
              }
            }
          >
            <View>
              <View
                accessible={true}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "#F0EEEE",
                    "borderRadius": 45,
                    "height": 70,
                    "justifyContent": "center",
                    "width": 70,
                  }
                }
              >
                <Text
                  allowFontScaling={false}
                  style={
                    Array [
                      Object {
                        "color": "#666666",
                        "fontSize": 24,
                      },
                      undefined,
                      Object {
                        "fontFamily": "Material Design Icons",
                        "fontStyle": "normal",
                        "fontWeight": "normal",
                      },
                      Object {},
                    ]
                  }
                >
                  󰸇
                </Text>
              </View>
              <Text
                style={
                  Object {
                    "color": "black",
                    "fontFamily": "Roboto-Regular",
                    "fontSize": 16,
                    "fontStyle": "normal",
                    "paddingTop": 2,
                    "textAlign": "center",
                  }
                }
              >
                Send
              </Text>
            </View>
            <View
              style={
                Object {
                  "marginLeft": 30,
                }
              }
            >
              <View
                accessible={true}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#F0EEEE",
                      "borderRadius": 45,
                      "height": 70,
                      "justifyContent": "center",
                      "width": 70,
                    },
                  ]
                }
              >
                <Text
                  allowFontScaling={false}
                  style={
                    Array [
                      Object {
                        "color": "#666666",
                        "fontSize": 24,
                      },
                      undefined,
                      Object {
                        "fontFamily": "Material Design Icons",
                        "fontStyle": "normal",
                        "fontWeight": "normal",
                      },
                      Object {},
                    ]
                  }
                >
                  󰮏
                </Text>
              </View>
              <Text
                style={
                  Object {
                    "color": "black",
                    "fontFamily": "Roboto-Regular",
                    "fontSize": 16,
                    "fontStyle": "normal",
                    "paddingTop": 2,
                    "textAlign": "center",
                  }
                }
              >
                Receive
              </Text>
            </View>
          </View>
          <View
            style={
              Object {
                "alignSelf": "center",
                "backgroundColor": "#cccccc",
                "height": 1,
                "marginTop": 25,
                "width": "90%",
              }
            }
          />
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          style={
            Object {
              "marginTop": 10,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "black",
                "fontFamily": "Roboto-Bold",
                "fontSize": 17,
                "fontStyle": "normal",
                "fontWeight": "normal",
                "marginBottom": 5,
                "marginLeft": "5%",
              }
            }
          >
            12 December
          </Text>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "justifyContent": "center",
              "paddingBottom": 10,
              "paddingTop": 10,
              "width": "100%",
            }
          }
        >
          <View
            style={
              Object {
                "width": "90%",
              }
            }
          >
            <View
              style={
                Object {
                  "flex": 1,
                  "flexDirection": "row",
                }
              }
            >
              <Image
                source={
                  Object {
                    "testUri": "../../../assets/img/dot.png",
                  }
                }
                style={
                  Object {
                    "borderRadius": 75,
                    "height": 50,
                    "overflow": "hidden",
                    "width": 50,
                  }
                }
              />
              <View
                style={
                  Object {
                    "flex": 1,
                    "flexDirection": "column-reverse",
                    "marginLeft": 20,
                    "paddingTop": 5,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "flexDirection": "row",
                      "paddingTop": 5,
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "flex": 1,
                      }
                    }
                  >
                    <Text
                      style={
                        Array [
                          Object {
                            "fontFamily": "Roboto-Regular",
                            "fontSize": 17,
                            "fontStyle": "normal",
                          },
                          Object {
                            "color": "#F45252",
                            "textAlign": "left",
                          },
                        ]
                      }
                    >
                      -
                      100
                       
                      DOT
                    </Text>
                  </View>
                </View>
                <Text
                  numberOfLines={1}
                  style={
                    Object {
                      "color": "black",
                      "fontFamily": "Roboto-Regular",
                      "fontSize": 17,
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    }
                  }
                >
                  member0
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "justifyContent": "center",
              "paddingBottom": 10,
              "paddingTop": 10,
              "width": "100%",
            }
          }
        >
          <View
            style={
              Object {
                "width": "90%",
              }
            }
          >
            <View
              style={
                Object {
                  "flex": 1,
                  "flexDirection": "row",
                }
              }
            >
              <Image
                source={
                  Object {
                    "testUri": "../../../assets/img/dot.png",
                  }
                }
                style={
                  Object {
                    "borderRadius": 75,
                    "height": 50,
                    "overflow": "hidden",
                    "width": 50,
                  }
                }
              />
              <View
                style={
                  Object {
                    "flex": 1,
                    "flexDirection": "column-reverse",
                    "marginLeft": 20,
                    "paddingTop": 5,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "flexDirection": "row",
                      "paddingTop": 5,
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "flex": 1,
                      }
                    }
                  >
                    <Text
                      style={
                        Array [
                          Object {
                            "fontFamily": "Roboto-Regular",
                            "fontSize": 17,
                            "fontStyle": "normal",
                          },
                          Object {
                            "color": "#F45252",
                            "textAlign": "left",
                          },
                        ]
                      }
                    >
                      -
                      100
                       
                      DOT
                    </Text>
                  </View>
                </View>
                <Text
                  numberOfLines={1}
                  style={
                    Object {
                      "color": "black",
                      "fontFamily": "Roboto-Regular",
                      "fontSize": 17,
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    }
                  }
                >
                  member1
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "justifyContent": "center",
              "paddingBottom": 10,
              "paddingTop": 10,
              "width": "100%",
            }
          }
        >
          <View
            style={
              Object {
                "width": "90%",
              }
            }
          >
            <View
              style={
                Object {
                  "flex": 1,
                  "flexDirection": "row",
                }
              }
            >
              <Image
                source={
                  Object {
                    "testUri": "../../../assets/img/dot.png",
                  }
                }
                style={
                  Object {
                    "borderRadius": 75,
                    "height": 50,
                    "overflow": "hidden",
                    "width": 50,
                  }
                }
              />
              <View
                style={
                  Object {
                    "flex": 1,
                    "flexDirection": "column-reverse",
                    "marginLeft": 20,
                    "paddingTop": 5,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "flexDirection": "row",
                      "paddingTop": 5,
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "flex": 1,
                      }
                    }
                  >
                    <Text
                      style={
                        Array [
                          Object {
                            "fontFamily": "Roboto-Regular",
                            "fontSize": 17,
                            "fontStyle": "normal",
                          },
                          Object {
                            "color": "#F45252",
                            "textAlign": "left",
                          },
                        ]
                      }
                    >
                      -
                      100
                       
                      DOT
                    </Text>
                  </View>
                </View>
                <Text
                  numberOfLines={1}
                  style={
                    Object {
                      "color": "black",
                      "fontFamily": "Roboto-Regular",
                      "fontSize": 17,
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    }
                  }
                >
                  member2
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "justifyContent": "center",
              "paddingBottom": 10,
              "paddingTop": 10,
              "width": "100%",
            }
          }
        >
          <View
            style={
              Object {
                "width": "90%",
              }
            }
          >
            <View
              style={
                Object {
                  "flex": 1,
                  "flexDirection": "row",
                }
              }
            >
              <Image
                source={
                  Object {
                    "testUri": "../../../assets/img/dot.png",
                  }
                }
                style={
                  Object {
                    "borderRadius": 75,
                    "height": 50,
                    "overflow": "hidden",
                    "width": 50,
                  }
                }
              />
              <View
                style={
                  Object {
                    "flex": 1,
                    "flexDirection": "column-reverse",
                    "marginLeft": 20,
                    "paddingTop": 5,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "flexDirection": "row",
                      "paddingTop": 5,
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "flex": 1,
                      }
                    }
                  >
                    <Text
                      style={
                        Array [
                          Object {
                            "fontFamily": "Roboto-Regular",
                            "fontSize": 17,
                            "fontStyle": "normal",
                          },
                          Object {
                            "color": "#F45252",
                            "textAlign": "left",
                          },
                        ]
                      }
                    >
                      -
                      100
                       
                      DOT
                    </Text>
                  </View>
                </View>
                <Text
                  numberOfLines={1}
                  style={
                    Object {
                      "color": "black",
                      "fontFamily": "Roboto-Regular",
                      "fontSize": 17,
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    }
                  }
                >
                  member3
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "justifyContent": "center",
              "paddingBottom": 10,
              "paddingTop": 10,
              "width": "100%",
            }
          }
        >
          <View
            style={
              Object {
                "width": "90%",
              }
            }
          >
            <View
              style={
                Object {
                  "flex": 1,
                  "flexDirection": "row",
                }
              }
            >
              <Image
                source={
                  Object {
                    "testUri": "../../../assets/img/dot.png",
                  }
                }
                style={
                  Object {
                    "borderRadius": 75,
                    "height": 50,
                    "overflow": "hidden",
                    "width": 50,
                  }
                }
              />
              <View
                style={
                  Object {
                    "flex": 1,
                    "flexDirection": "column-reverse",
                    "marginLeft": 20,
                    "paddingTop": 5,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "flexDirection": "row",
                      "paddingTop": 5,
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "flex": 1,
                      }
                    }
                  >
                    <Text
                      style={
                        Array [
                          Object {
                            "fontFamily": "Roboto-Regular",
                            "fontSize": 17,
                            "fontStyle": "normal",
                          },
                          Object {
                            "color": "#F45252",
                            "textAlign": "left",
                          },
                        ]
                      }
                    >
                      -
                      100
                       
                      DOT
                    </Text>
                  </View>
                </View>
                <Text
                  numberOfLines={1}
                  style={
                    Object {
                      "color": "black",
                      "fontFamily": "Roboto-Regular",
                      "fontSize": 17,
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    }
                  }
                >
                  member4
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "justifyContent": "center",
              "paddingBottom": 10,
              "paddingTop": 10,
              "width": "100%",
            }
          }
        >
          <View
            style={
              Object {
                "width": "90%",
              }
            }
          >
            <View
              style={
                Object {
                  "flex": 1,
                  "flexDirection": "row",
                }
              }
            >
              <Image
                source={
                  Object {
                    "testUri": "../../../assets/img/dot.png",
                  }
                }
                style={
                  Object {
                    "borderRadius": 75,
                    "height": 50,
                    "overflow": "hidden",
                    "width": 50,
                  }
                }
              />
              <View
                style={
                  Object {
                    "flex": 1,
                    "flexDirection": "column-reverse",
                    "marginLeft": 20,
                    "paddingTop": 5,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "flexDirection": "row",
                      "paddingTop": 5,
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "flex": 1,
                      }
                    }
                  >
                    <Text
                      style={
                        Array [
                          Object {
                            "fontFamily": "Roboto-Regular",
                            "fontSize": 17,
                            "fontStyle": "normal",
                          },
                          Object {
                            "color": "#F45252",
                            "textAlign": "left",
                          },
                        ]
                      }
                    >
                      -
                      100
                       
                      DOT
                    </Text>
                  </View>
                </View>
                <Text
                  numberOfLines={1}
                  style={
                    Object {
                      "color": "black",
                      "fontFamily": "Roboto-Regular",
                      "fontSize": 17,
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    }
                  }
                >
                  member5
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "justifyContent": "center",
              "paddingBottom": 10,
              "paddingTop": 10,
              "width": "100%",
            }
          }
        >
          <View
            style={
              Object {
                "width": "90%",
              }
            }
          >
            <View
              style={
                Object {
                  "flex": 1,
                  "flexDirection": "row",
                }
              }
            >
              <Image
                source={
                  Object {
                    "testUri": "../../../assets/img/dot.png",
                  }
                }
                style={
                  Object {
                    "borderRadius": 75,
                    "height": 50,
                    "overflow": "hidden",
                    "width": 50,
                  }
                }
              />
              <View
                style={
                  Object {
                    "flex": 1,
                    "flexDirection": "column-reverse",
                    "marginLeft": 20,
                    "paddingTop": 5,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "flexDirection": "row",
                      "paddingTop": 5,
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "flex": 1,
                      }
                    }
                  >
                    <Text
                      style={
                        Array [
                          Object {
                            "fontFamily": "Roboto-Regular",
                            "fontSize": 17,
                            "fontStyle": "normal",
                          },
                          Object {
                            "color": "#F45252",
                            "textAlign": "left",
                          },
                        ]
                      }
                    >
                      -
                      100
                       
                      DOT
                    </Text>
                  </View>
                </View>
                <Text
                  numberOfLines={1}
                  style={
                    Object {
                      "color": "black",
                      "fontFamily": "Roboto-Regular",
                      "fontSize": 17,
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    }
                  }
                >
                  member6
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "justifyContent": "center",
              "paddingBottom": 10,
              "paddingTop": 10,
              "width": "100%",
            }
          }
        >
          <View
            style={
              Object {
                "width": "90%",
              }
            }
          >
            <View
              style={
                Object {
                  "flex": 1,
                  "flexDirection": "row",
                }
              }
            >
              <Image
                source={
                  Object {
                    "testUri": "../../../assets/img/dot.png",
                  }
                }
                style={
                  Object {
                    "borderRadius": 75,
                    "height": 50,
                    "overflow": "hidden",
                    "width": 50,
                  }
                }
              />
              <View
                style={
                  Object {
                    "flex": 1,
                    "flexDirection": "column-reverse",
                    "marginLeft": 20,
                    "paddingTop": 5,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "flexDirection": "row",
                      "paddingTop": 5,
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "flex": 1,
                      }
                    }
                  >
                    <Text
                      style={
                        Array [
                          Object {
                            "fontFamily": "Roboto-Regular",
                            "fontSize": 17,
                            "fontStyle": "normal",
                          },
                          Object {
                            "color": "#F45252",
                            "textAlign": "left",
                          },
                        ]
                      }
                    >
                      -
                      100
                       
                      DOT
                    </Text>
                  </View>
                </View>
                <Text
                  numberOfLines={1}
                  style={
                    Object {
                      "color": "black",
                      "fontFamily": "Roboto-Regular",
                      "fontSize": 17,
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    }
                  }
                >
                  member7
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "justifyContent": "center",
              "paddingBottom": 10,
              "paddingTop": 10,
              "width": "100%",
            }
          }
        >
          <View
            style={
              Object {
                "width": "90%",
              }
            }
          >
            <View
              style={
                Object {
                  "flex": 1,
                  "flexDirection": "row",
                }
              }
            >
              <Image
                source={
                  Object {
                    "testUri": "../../../assets/img/dot.png",
                  }
                }
                style={
                  Object {
                    "borderRadius": 75,
                    "height": 50,
                    "overflow": "hidden",
                    "width": 50,
                  }
                }
              />
              <View
                style={
                  Object {
                    "flex": 1,
                    "flexDirection": "column-reverse",
                    "marginLeft": 20,
                    "paddingTop": 5,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "flexDirection": "row",
                      "paddingTop": 5,
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "flex": 1,
                      }
                    }
                  >
                    <Text
                      style={
                        Array [
                          Object {
                            "fontFamily": "Roboto-Regular",
                            "fontSize": 17,
                            "fontStyle": "normal",
                          },
                          Object {
                            "color": "#F45252",
                            "textAlign": "left",
                          },
                        ]
                      }
                    >
                      -
                      100
                       
                      DOT
                    </Text>
                  </View>
                </View>
                <Text
                  numberOfLines={1}
                  style={
                    Object {
                      "color": "black",
                      "fontFamily": "Roboto-Regular",
                      "fontSize": 17,
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    }
                  }
                >
                  member8
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "height": 0,
          }
        }
      />
      <View
        onLayout={[Function]}
      >
        <View
          style={
            Object {
              "marginBottom": 10,
              "marginTop": 10,
            }
          }
        >
          <ActivityIndicator
            animating={true}
            color="#2AB2E2"
            hidesWhenStopped={true}
            size={30}
          />
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;
